# GPU-FPGA-ML

./: .gitignore  README.md  pyproject.toml  run_demo.py  setup_dev.py
benchmarks/: __init__.py  profiler.py
docs/: development-roadmap.md  project-setup-documentation.md  theoretical-foundations-and-implementation-analysis.md
notebooks/: flashattention_demo.ipynb
src/: __init__.py
src/fpga/: __init__.py
src/fusion/: __init__.py  operator_fusion.py
src/gpu/: __init__.py
src/kernels/: __init__.py  base_kernel.py  flash_attention.py  moe_routing.py
src/utils/: __init__.py
tests/: test_flash_attention.py
tools/: __init__.py
