[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpu-fpga-ml-kernel"
description = "GPU/FPGA Kernel Implementation for Novel ML Primitives"
version = "0.1.0"
authors = [
    {name = "ML Hardware Engineer", email = "engineer@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[tool.hatch.build.targets.wheel]
packages = ["src"]
dependencies = [
    "torch>=2.0.0",
    "triton>=2.1.0",
    "numpy>=1.21.0",
    "cupy-cuda12x>=12.0.0",
    "pycuda>=2022.2",
    "numba>=0.57.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "jupyterlab>=3.4.0",
    "tensorboard>=2.10.0",
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
    "py3nvml>=0.2.7",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]
fpga = [
    "pynq>=2.7.0",
    "xrt>=2.12.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 